--- a/Analysis Code.Rmd
+++ b/Analysis Code.Rmd
@@ -1370,14 +1370,14 @@ caa = xcr.groupby('first_base').agg(count=('diff', 'count'), caa=('diff', 'sum')
 fig, axs = plt.subplots(1, 2, figsize=(15, 6))  # Adjust the figure size as needed
 
 # Plot the first histogram in the first subplot
-axs[0].hist(caa['caa'], bins=50, color='mediumaquamarine', edgecolor='darkslategray')  # Adjust the number of bins
+axs[0].hist(caa['caa'], bins=50, color='#66c2a5', edgecolor='#1f78b4'. alpha = 0.8)  # Adjust the number of bins
 axs[0].set_title('Distribution of CAA')
 axs[0].set_xlabel('CAA')
 axs[0].set_ylabel('Number of Players')
 axs[0].grid(True)
 
 # Plot the second histogram in the second subplot
-axs[1].hist(caa['fp'], bins=50, color='mediumaquamarine', edgecolor='darkslategray')  # Adjust the number of bins
+axs[1].hist(caa['fp'], bins=50, color='#66c2a5', edgecolor='#1f78b4', alpha = 0.8)  # Adjust the number of bins
 axs[1].set_title('Distribution of Fielding Percentage')
 axs[1].set_xlabel('Fielding Percentage')
 axs[1].set_ylabel('Number of Players')
